# dockerissimo-rust

./: Cargo.toml  Dockerfile  README.md  compose.yml
src/: cli.rs  log_util.rs  main.rs
src/web/: errors.rs  mod.rs
src/web/errors/: mod.rs
src/web/extractors/: mod.rs  pool_connection.rs  validate_body.rs
src/web/middlewares/: mod.rs  with_connection.rs
src/web/routes/: root.rs
src/web/routes/main/: root.rs
src/web/types/: mod.rs  with_connection.rs
