[package]
name = "poglo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum="0.6.20"
clap = { version = "4.4.7", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
