[package]
name = "dockerissimo-rust"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["macros"]}
clap = { version = "4.4.7", features = ["derive"] }
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
sqlx-core = "0.7.2"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
axum-extra = "0.8.0"
thiserror = "1.0.50"
validator = { version = "0.16.1", features = ["derive"] }
